feat(chat): added OpenAI chat functionality

--- a/env.yml
+++ b/env.yml
@@ -1,12 +1,13 @@
 name: mvp-conv-backend
 
 channels:
-  - pytorch
-  - anaconda
   - conda-forge
+  - anaconda
   - defaults
 
 dependencies:
+  # pillow, pdf2image pytesseract
+  - pytesseract
   - ipykernel
   - fastapi
   - numpy
@@ -23,3 +24,4 @@ dependencies:
   - pip:
       - gradio
       - llama-index
+      - pdf2image
